This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
10/16/24: Fixed script commands Get/SetSTEMBrightContrast (In 4.1).

10/2/24: Fixed getting data from first inventory call to JEOL (In 4.1).

9/30/24: Fixed failure to find autocorrelation peaks at X = 0 (In 4.1).

9/26/24: SEM_4-1-17
9/26/24: Fixed montage setup so it opens HQ settings when MontageAllowHQinLD
property is used (In 4.1).

9/26/24: Fixed SetFolderForFrames for Falcon, broken 7/15. (In 4.1).

9/19/24: Fixed question popups in new map routine to properly stop a
script if encountered with no message box on errors, and bypassed question on
saving into file if running Acquire at Items (In 4.1).

9/19/24: Fixed status for stage Y axis from JEOL to be 0 if 2 (In 4.1).

9/18/24: Fixed separate zoom for View so changing it doesn't change general
zoom (In 4.1).

9/15/24: SEM_4-1-16
9/14/24: Changed tilt limit in Walkup script command to use MaximumTiltAngle
(In 4.1).

9/14/24: Fixed Refine ZLP, broken 8/7 for scopes with NoSpectrumOffset set
(In 4.1).

9/4/24: Made sure number of frames to skip before exposure is 0 when acquiring
from Falcon 3 or 4 and zeroed out wild values from settings (In 4.1).

8/21/22: SEM_4-1-15
8/21/22: Updated Ctfplotter in package to fix a problem with autotuning and
work better with astigmatism and coma routines (In 4.1).

8/21/22: Possibly fixed a problem with changing low dose area at zero IS on
JEOL (In 4.1).

8/14/24: Fixed using Ctrl-A with > 65535 characters in script editor (In 4.1).

8/7/24: Restored adjustment of ZLP offset when Align ZLP in DM is detected,
broken when debug output added in Feb 2013 (In 4.1).

7/27/24: Fixed crash setting up range of new file with montage reusability
selected but then single images selected (In 4.1).
