@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+10/24/24: Fixed the 4 script commands relating stage and image coordinates to
+work correctly for Navigator coordinates and clarified help (In 4.1).
+
 10/16/24: Fixed script commands Get/SetSTEMBrightContrast (In 4.1).
 
 10/2/24: Fixed getting data from first inventory call to JEOL (In 4.1).
